# llm-engineering-bootcamp

./: .env.example  .gitignore  CONTRIBUTING.md  INDEX.md  LICENSE  Makefile  README.md
.github/ISSUE_TEMPLATE/: 01-question.yml  02-bug.yml  03-suggestion.yml  config.yml
cheatsheets/: agent-patterns.md  api-compare.md  eval-metrics.md  mcp-cheatsheet.md  production-patterns.md  prompt-patterns.md  rag-patterns.md
curriculum/: 00-roadmap.md  day00-prep.md  extras.md  recovery-playbook.md  schedule.md  self-check.md  troubleshooting.md  week1-day01-llm-basics.md  week1-day02-api-providers.md  week1-day03-prompt-engineering.md  week1-day04-structured-output.md  week1-day05-function-calling.md  week1-day06-embedding-vectordb.md  week1-day07-basic-rag.md  week2-day08-advanced-rag.md  week2-day09-eval.md  week2-day10-agents-langgraph.md  week2-day11-mcp.md  week2-day12-observability.md  week2-day13-local-llm-runpod.md  week2-day14-final-portfolio.md
infra/: README.md
infra/langfuse/: README.md  docker-compose.yml
infra/qdrant/: README.md  docker-compose.yml
notes/: concepts.md  daily-log.md  decisions.md  keywords.md
projects/day01-chatbot-cli/: README.md  chat.py  pyproject.toml  temperature_demo.py  tokens.py
projects/day02-prompt-lab/: README-patterns.md  README.md  pyproject.toml  runner.py
projects/day02-prompt-lab/prompts/: 01-zero-shot.txt  03-cot.txt  05-xml-structured.txt
projects/day03-structured-extractor/: README.md  extract.py  pyproject.toml  schemas.py
projects/day04-tool-agent/: README.md  agent.py  pyproject.toml  tools_schema.py
projects/day04-tool-agent/tools/: __init__.py  calculator.py  file_io.py  weather.py  web_search.py
projects/day05-embedding-search/: README.md  compare.py  ingest.py  pyproject.toml  search.py
projects/day06-basic-rag/: README.md  ingest.py  pyproject.toml  rag.py
projects/day06-basic-rag/prompts/: rag_template.txt
projects/day07-advanced-rag/: README.md  pyproject.toml
projects/day07-advanced-rag/query_transform/: hyde.py  multi_query.py
projects/day07-advanced-rag/retrievers/: hybrid.py  reranker.py
projects/day08-rag-eval/: README.md  golden_example.json  pyproject.toml  run_ragas.py
projects/day09-langgraph-agent/: README.md  graph.py  pyproject.toml  state.py
projects/day10-mcp-server/: README.md  pyproject.toml  server.py
projects/day11-observability/: README.md  instrument_example.py  prompt_cache_demo.py  pyproject.toml  rate_limit_demo.py
projects/day12-local-llm/: README.md  benchmark.py  ollama_chat.py  ollama_rag.py  pyproject.toml
projects/day12-local-llm/runpod/: vllm_client.py
projects/final-portfolio/: ARCHITECTURE.md  README.md  pyproject.toml
projects/final-portfolio/app/: main.py
resources/: 00-top20-priority.md  later.md  links-classified.md  must-read.md  optional.md  pre-digested.md  skip.md
setup/: 0-prerequisites.md  1-install.sh  2-verify.py  3-accounts-checklist.md
shared/: README.md  pyproject.toml
shared/ai_study/: __init__.py  config.py  embeddings.py  langfuse_client.py  llm.py  logging.py  prompts.py  retry.py  tokens.py  vectors.py
