[project]
name = "ai-study-shared"
version = "0.2.0"
description = "Shared utilities for the 14-day LLM engineering bootcamp"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Jinhui Park" }]

dependencies = [
    # ── LLM providers ─────────────────────────────────────
    "openai>=1.65.0",
    "anthropic>=0.43.0",
    "google-genai>=0.8.0",

    # ── Local ─────────────────────────────────────────────
    "ollama>=0.4.0",

    # ── Structured / validation ──────────────────────────
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "instructor>=1.7.0",
    "email-validator>=2.2.0",

    # ── Tokens / cost ────────────────────────────────────
    "tiktoken>=0.8.0",

    # ── HTTP / env / retry ───────────────────────────────
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "tenacity>=9.0.0",
    "loguru>=0.7.2",
    "rich>=13.9.0",

    # ── Vector / embedding ───────────────────────────────
    "qdrant-client>=1.12.0",
    "sentence-transformers>=3.3.0",
    "rank-bm25>=0.2.2",
    "voyageai>=0.3.0",
    "FlagEmbedding>=1.3.0",

    # ── Doc parsing ──────────────────────────────────────
    "pypdf>=5.1.0",
    "pdfplumber>=0.11.0",
    "unstructured>=0.16.0",
    "beautifulsoup4>=4.12.0",

    # ── Templates ────────────────────────────────────────
    "jinja2>=3.1.4",

    # ── LLM frameworks (Day 7+) ──────────────────────────
    "langchain>=0.3.10",
    "langchain-community>=0.3.10",
    "langchain-openai>=0.2.11",
    "langchain-anthropic>=0.3.0",
    "langchain-qdrant>=0.2.0",
    "langgraph>=0.2.60",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "llama-index>=0.12.0",
    "llama-index-vector-stores-qdrant>=0.4.0",
    "llama-index-embeddings-openai>=0.3.0",

    # ── Agent frameworks (Day 10) ────────────────────────
    "pydantic-ai>=0.0.14",
    "smolagents>=1.2.0",

    # ── MCP (Day 11) ─────────────────────────────────────
    "mcp>=1.1.0",
    "fastmcp>=2.1.0",

    # ── Eval (Day 9) ─────────────────────────────────────
    "ragas>=0.2.10",
    "datasets>=3.1.0",
    "rapidfuzz>=3.10.0",

    # ── Observability / Production (Day 12) ──────────────
    "langfuse>=2.55.0",
    "arize-phoenix>=5.10.0",
    "aiolimiter>=1.2.0",
    "pybreaker>=1.2.0",

    # ── Web tools ────────────────────────────────────────
    "tavily-python>=0.5.0",
    "duckduckgo-search>=6.3.0",
    "asteval>=1.0.5",

    # ── CLI ──────────────────────────────────────────────
    "typer>=0.15.0",

    # ── RAG extras ───────────────────────────────────────
    "cohere>=5.13.0",

    # ── Serving (Day 14) ─────────────────────────────────
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "streamlit>=1.40.0",
]

[project.optional-dependencies]
# 무거운 ML deps — 필요할 때만
gpu = [
    "torch>=2.5.0",
    "accelerate>=1.2.0",
    "bitsandbytes>=0.45.0",
]
# 그림 그리기
viz = [
    "matplotlib>=3.9.0",
    "seaborn>=0.13.2",
    "plotly>=5.24.0",
]
# 개발/테스트
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "ipython>=8.28.0",
    "jupyterlab>=4.3.0",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ai_study"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM", "TID"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
