[project]
name = "day05-embedding-search"
version = "0.1.0"
description = "Day 6 — Semantic Search + 5 임베딩 모델 × Qdrant 튜닝"
requires-python = ">=3.11"

dependencies = [
    "ai-study-shared",
    "qdrant-client>=1.12",
    "sentence-transformers>=3.3",
    "rank-bm25>=0.2.2",
    "voyageai>=0.3",
    "FlagEmbedding>=1.3",      # BGE-M3 (dense+sparse+colbert)
]

[tool.uv.sources]
ai-study-shared = { path = "../../shared", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
