[project]
name = "day06-basic-rag"
version = "0.1.0"
description = "Day 7 — 기본 RAG v1 (3 프레임워크 병렬 구현)"
requires-python = ">=3.11"

dependencies = [
    "ai-study-shared",
    "qdrant-client>=1.12",
    "langchain>=0.3.10",
    "langchain-community>=0.3.10",
    "langchain-openai>=0.2.11",
    "langchain-qdrant>=0.2",
    "llama-index>=0.12",
    "llama-index-vector-stores-qdrant>=0.4",
    "llama-index-embeddings-openai>=0.3",
    "pypdf>=5.1",
    "pdfplumber>=0.11",
    "typer>=0.15",
]

[tool.uv.sources]
ai-study-shared = { path = "../../shared", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
