[project]
name = "day08-rag-eval"
version = "0.1.0"
description = "Day 9 — RAG Eval Pipeline (Ragas + Judge bias + CI Gate)"
requires-python = ">=3.11"

dependencies = [
    "ai-study-shared",
    "ragas>=0.2.10",
    "datasets>=3.1",
    "pandas>=2.2",
    "matplotlib>=3.9",           # Pareto plot
]

[project.optional-dependencies]
stretch = [
    "scikit-learn>=1.5",         # kappa / agreement
    "deepeval>=1.5",             # pytest-style LLM test
]

[tool.uv.sources]
ai-study-shared = { path = "../../shared", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
