[project]
name = "day09-langgraph-agent"
version = "0.1.0"
description = "Day 10 — LangGraph State Machine Agent (classifier/planner/reflector)"
requires-python = ">=3.11"

dependencies = [
    "ai-study-shared",
    "langgraph>=0.2.60",
    "langgraph-checkpoint-sqlite>=2.0",
    "langchain-openai>=0.2.11",
    "langchain-anthropic>=0.3",
    "pydantic-ai>=0.0.14",       # 비교용 mini 구현
    "smolagents>=1.2",           # 선택
    "typer>=0.15",
]

[tool.uv.sources]
ai-study-shared = { path = "../../shared", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
