[project]
name = "day10-mcp-server"
version = "0.1.0"
description = "Day 11 — MCP Server (Tools/Resources/Prompts/Sampling)"
requires-python = ">=3.11"

dependencies = [
    "ai-study-shared",
    "mcp>=1.1",
    "fastmcp>=2.1",
    "asteval>=1.0.5",
]

[project.scripts]
ai-study-mcp = "server:main"

[tool.uv.sources]
ai-study-shared = { path = "../../shared", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
