[project]
name = "day11-observability"
version = "0.1.0"
description = "Day 12 — Observability + Production Retrofit"
requires-python = ">=3.11"

dependencies = [
    "ai-study-shared",
    "langfuse>=2.55",
    "tenacity>=9.0",
    "aiolimiter>=1.2",
    "pybreaker>=1.2",
]

[project.optional-dependencies]
stretch = [
    "arize-phoenix>=5.10",           # 병행 관측
    "openinference-instrumentation-openai",
    "openinference-instrumentation-anthropic",
]

[tool.uv.sources]
ai-study-shared = { path = "../../shared", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
