[project]
name = "day12-local-llm"
version = "0.1.0"
description = "Day 13 — Local LLM (Ollama/vLLM) + RunPod Serverless"
requires-python = ">=3.11"

dependencies = [
    "ai-study-shared",
    "ollama>=0.4",
    "openai>=1.65",          # Ollama/RunPod에 base_url 트릭으로 재사용
]

[project.optional-dependencies]
gpu = [
    "vllm>=0.6",             # Linux + NVIDIA only
]
mac = [
    "mlx-lm>=0.20",          # Apple Silicon
]

[tool.uv.sources]
ai-study-shared = { path = "../../shared", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
